1.7.1 (2018-04-11)
- Version for Kodi repository
- revised code by rework/remove some functions
- removed deprecated iconImage kwarg
- updated Fanart
- revised except type and added new except
- corrected language identification
- moved strings.po to the resource.language folders
- reversed weekdays on Replay sections
- added control and warning to the user of the unavailability of the video on special cases
  (Josefin episodes or old News episodes on Replay functions)

1.7.0 (2018-04-05) (by Testato)
- separated the TG La7 Cronache from TG La7
- removed duplicated episodes on Josephine Ange Gardien

1.6.0 (2018-04-03) (by Testato)
- new section News & Weather (Tg La7, Tg La7d, Meteo)

1.5.3 (2018-03-29) (by Testato)
- added fanart and thumbnails to all pages of the addon

1.5.2 (2018-03-28) (by Testato)
- added fanart
- added sections thumbnail

1.5.1 (2018-03-27) (by Testato)
- removed Next page link when not necessary 
  (this also solves the problem of duplicating episodes on some Programs)
- L'Ispettore Barnaby episodes duplication fix

1.5.0 (2018-03-26) (by Testato)
- added program broadcast date for all programs

1.4.0 (2018-03-22) (by Testato)
- now the videos in the Week section of all programs are listed
  (this also solves the problem that the last episode sometimes did not appear)
- manually added the Program Artedi

1.3.0 (2018-03-04) (by Testato)
- new icon La7/La7d
- scrap of old on demand programs index page
- removed duplicated Programs
- Fix for random missing tag <p> on Replay La7 and Replay La7d 
- Program mamma mia che settimana fix
- Program se stasera sono qui fix
- Program chi sceglie la seconda casa fix

1.2.0 (2018-02-27) (by Testato)
- added La7d Replay
- added display of the seventh day on La7 Replay and La7d Replay

1.1.1 (2018-02-27) (by Testato)
- bugfix for program without Thumbnail

1.1.0 (2018-02-26) (by Testato)
- added La7d On Demand Programs
- scrap of new on demand programs index page
- Program Faccia a Faccia fix