@@ -7,8 +7,18 @@
 - corrected language identification
 - moved strings.po to the resource.language folders
 - reversed weekdays on Replay sections
-- added control and warning to the user of the unavailability of the video on special cases
-  (Josefin episodes or old News episodes on Replay functions)
+- added control and warning to the user for unavailable videos
+- added new on-demand programs
+  Bianco e Nero
+  Bellezze in Bicicletta
+  Special Guest
+  Eccezionale Veramente
+  L'ora della salute
+  Missione Natura
+  Italian Fashion Show
+  Video non catalogati (Film & Serie)
+  Video non catalogati (Doc & Altro)
+
 
 1.7.0 (2018-04-05) (by Testato)
 - separated the TG La7 Cronache from TG La7
